--- a/Kyrsach/MainWindow.axaml
+++ b/Kyrsach/MainWindow.axaml
@@ -15,7 +15,8 @@
     <DockPanel>
         <!-- Панель управления -->
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Spacing="10" Margin="10">
-            <TextBox Width="200" Watermark="Поиск..."/>
+            <TextBox x:Name="SearchTextBox" Width="200" Watermark="Поиск..." 
+                     TextChanged="OnSearchTextChanged"/>
             <ComboBox x:Name="DiscountFilterComboBox" Width="130" SelectedIndex="0">
                 <ComboBoxItem>Все скидки</ComboBoxItem>
                 <ComboBoxItem>0-5%</ComboBoxItem>
