--- a/Kyrsach/MainWindow.axaml
+++ b/Kyrsach/MainWindow.axaml
@@ -32,13 +32,6 @@
             </ComboBox>
             <Button x:Name="AddServiceButton" Content="Добавить услугу" IsVisible="False"/>
             <Button x:Name="AppointmentsButton" Content="Ближайшие записи" IsVisible="False"/>
-            <Button Content="Редактировать" 
-                    IsVisible="{Binding IsAdmin}"
-                    Command="{Binding EditCommand}"/>
-
-            <Button Content="Удалить"
-                    IsVisible="{Binding IsAdmin}"
-                    Command="{Binding DeleteCommand}"/>
         </StackPanel>
 
         <!-- Список услуг -->
@@ -77,6 +70,18 @@
                                        
                             <!-- Новая цена -->
                             <TextBlock Text="{Binding NewPriceFormatted}"/>
+                        </StackPanel>
+                        
+                        <!-- Кнопки (ТОЛЬКО ДЛЯ АДМИНА) -->
+                        <StackPanel Orientation="Horizontal" Spacing="10" 
+                                    Margin="0,10,0,0"
+                                    IsVisible="{Binding IsAdmin}">
+                            <Button Content="Редактировать" 
+                                    Command="{Binding EditCommand}"
+                                    Padding="10,5"/>
+                            <Button Content="Удалить"
+                                    Command="{Binding DeleteCommand}"
+                                    Padding="10,5"/>
                         </StackPanel>
                         
                         <!-- Скидка (под ценой) -->
