--- a/Kyrsach/MainWindow.axaml
+++ b/Kyrsach/MainWindow.axaml
@@ -39,6 +39,10 @@
                     IsVisible="{Binding IsAdmin, RelativeSource={RelativeSource AncestorType=Window}}"
                     />
         </StackPanel>
+        
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="5" Spacing="10">
+            <TextBlock x:Name="RecordsCounter" FontWeight="Bold"/>
+        </StackPanel>
 
         <!-- Список услуг -->
         <ListBox x:Name="ServiceBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
