--- a/Kyrsach/AuthWindow.axaml
+++ b/Kyrsach/AuthWindow.axaml
@@ -1,12 +1,30 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="Kyrsach.AuthWindow"
-        Title="Авторизация"
-        Width="300" Height="200"
+        Title="Выбор режима работы"
+        Width="300" Height="250"
         WindowStartupLocation="CenterOwner">
-    <StackPanel Margin="20" Spacing="10">
-        <TextBlock Text="Введите код администратора:"/>
-        <TextBox x:Name="CodeTextBox" PasswordChar="*"/>
-        <Button Content="Войти" Click="LoginButton_Click"/>
+    <StackPanel Margin="20" Spacing="15">
+        <TextBlock Text="Выберите режим работы:" FontSize="16"/>
+        
+        <Button x:Name="UserModeButton" 
+                Content="Пользователь" 
+                Click="UserModeButton_Click"
+                Padding="10,5"/>
+                
+        <Button x:Name="AdminModeButton" 
+                Content="Администратор" 
+                Click="AdminModeButton_Click"
+                Padding="10,5"/>
+                
+        <StackPanel x:Name="PasswordPanel" 
+                    IsVisible="False"
+                    Spacing="5">
+            <TextBlock Text="Введите пароль администратора:"/>
+            <TextBox x:Name="PasswordBox" 
+                     PasswordChar="*"/>
+            <Button Content="Войти" 
+                    Click="AdminLoginButton_Click"/>
+        </StackPanel>
     </StackPanel>
 </Window>
