--- a/Kyrsach/Windows/AppointmentsWindow.axaml
+++ b/Kyrsach/Windows/AppointmentsWindow.axaml
@@ -3,13 +3,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kyrsach"
+        xmlns:converters="clr-namespace:Kyrsach.Converters"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Kyrsach.AppointmentsWindow"
+        x:Class="Kyrsach.Windows.AppointmentsWindow"
         x:CompileBindings="False"
         Title="Ближайшие записи"
         Width="800" Height="500">
     <Window.Resources>
-        <local:BoolToRedBrushConverter x:Key="BoolToRedBrushConverter"/>
+        <converters:BoolToRedBrushConverter x:Key="BoolToRedBrushConverter"/>
     </Window.Resources>
     
     <Grid>
