--- a/Kyrsach/Windows/AuthWindow.axaml
+++ b/Kyrsach/Windows/AuthWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        x:Class="Kyrsach.AuthWindow"
+        x:Class="Kyrsach.Windows.AuthWindow"
         Title="Выбор режима работы"
         Width="300" Height="250"
         WindowStartupLocation="CenterOwner">
