--- a/Kyrsach/Windows/EditServiceWindow.axaml
+++ b/Kyrsach/Windows/EditServiceWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        x:Class="Kyrsach.EditServiceWindow"
+        x:Class="Kyrsach.Windows.EditServiceWindow"
         x:CompileBindings="False"
         Title="Редактирование услуги"
         Width="400"
