--- a/Kyrsach/Windows/ServicePhotosWindow.axaml
+++ b/Kyrsach/Windows/ServicePhotosWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Kyrsach.ServicePhotosWindow"
+        x:Class="Kyrsach.Windows.ServicePhotosWindow"
         Title="ServicePhotosWindow"
         Width="700" Height="550">
     <Grid>
